@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: JavaInfoCmd.test,v 1.6 2002/12/27 02:44:41 mdejong Exp $
+# RCS: @(#) $Id: JavaInfoCmd.test,v 1.7 2003/01/10 01:35:58 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -298,7 +298,7 @@ test javaInfoCmd-6.2 {fields} {
 
 test javaInfoCmd-6.3 {fields} {
     list [catch {java::info fields junk1 junk2} msg] $msg
-} {1 {bad option "junk1": must be -type, or -static}}
+} {1 {bad option "junk1": must be -type or -static}}
 
 test javaInfoCmd-6.4 {fields} {
     list [catch {java::info fields junk} msg] $msg
@@ -418,7 +418,7 @@ test javaInfoCmd-7.2 {methods} {
 
 test javaInfoCmd-7.3 {methods} {
     list [catch {java::info methods junk1 junk2 junk3} msg] $msg
-} {1 {bad option "junk1": must be -type, or -static}}
+} {1 {bad option "junk1": must be -type or -static}}
 
 test javaInfoCmd-7.4 {methods} {
     list [catch {java::info methods junk} msg] $msg
@@ -445,7 +445,7 @@ test javaInfoCmd-7.7 {methods} {
 
 test javaInfoCmd-7.8 {methods -static} {
     list [catch {java::info methods -static junk1 junk2} msg] $msg
-} {1 {bad option "junk1": must be -type, or -static}}
+} {1 {bad option "junk1": must be -type or -static}}
 
 test javaInfoCmd-7.9 {methods -static} {
     list [catch {java::info methods -static} msg] $msg
@@ -482,7 +482,7 @@ test javaInfoCmd-7.14 {methods -static} {
 
 test javaInfoCmd-7.15 {methods -type} {
     list [catch {java::info methods -type junk1 junk2} msg] $msg
-} {1 {bad option "junk1": must be -type, or -static}}
+} {1 {bad option "junk1": must be -type or -static}}
 
 test javaInfoCmd-7.16 {methods -type} {
     list [catch {java::info methods -type} msg] $msg
